Adjusted documentation in a few places
